# mem-vid-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mcp.json.example  pyproject.toml
.github/workflows/: ci.yml
skills/memvid-core/: SKILL.md
src/memvid_mcp/: __init__.py  classifier.py  decay.py  dual_memory.py  memory.py  runtime.py  scope_classifier.py  server.py  temporal.py  waypoint.py
tests/: conftest.py  test_classifier.py  test_decay.py  test_dual_memory.py  test_scope_classifier.py  test_temporal.py  test_waypoint.py
