[project]
name = "memvid-mcp"
version = "0.1.0"
description = "MCP server for memvid-based memory storage, inspired by OpenMemory"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "memvid>=0.1.0",
    "mcp>=1.0.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
memvid-mcp = "memvid_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memvid_mcp"]
